# CodeTutorAI

./: .env.example  .gitignore  README.md  app.py  flow.py  implementation_plan.md  install_dev.sh  main.py  overview.md  pyproject.toml  requirements.txt  setup.py  streamlit_app.py  test_enlightenai.py  test_mock.py
assets/: autogen_example.txt  banner.md  banner.txt  fastapi_example.txt  logo.md  logo.txt  numpy_example.txt
docs/: _config.yml  configuration.md  contributing.md  index.md  installation.md  license.md  usage.md
docs/examples/autogen/: index.md
docs/examples/fastapi/: index.md
docs/examples/numpy/: index.md
nodes/: __init__.py  analyze_relationships.py  combine_tutorial.py  fetch_repo.py  fetch_repo_gitin.py  fetch_web.py  identify_abstractions.py  order_chapters.py  write_chapters.py
src/codetutorai/: __init__.py  cli.py  flow.py  test_enlightenai.py  test_mock.py
src/codetutorai/nodes/: __init__.py  analyze_relationships.py  combine_tutorial.py  fetch_repo_gitin.py  fetch_web.py  identify_abstractions.py  node.py  order_chapters.py  write_chapters.py
src/codetutorai/utils/: __init__.py  call_llm.py  constants.py  diagram_generator.py  formatting.py  history_manager.py  html_viewer.py  llm_client.py  mock_data.py
src/enlightenai/: __init__.py  cli.py  flow.py  test_enlightenai.py  test_mock.py
src/enlightenai/nodes/: __init__.py  analyze_relationships.py  combine_tutorial.py  fetch_repo.py  fetch_repo_gitin.py  fetch_web.py  (+4 more)
utils/: __init__.py  call_llm.py  code_analysis.py  crawl_github.py  formatting.py  llm_client.py  mock_data.py
(+11 files in other folders)
