[project]
name = "enlightenai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "crawl4ai>=0.5.0.post8",
    "diskcache>=5.6.3", # Added for LLM caching
    "gitin>=0.1.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]
